5/ingress-redmine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redmine
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName : nginx
  rules:
    - host: ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine
                port:
                  number: 3000
